--- a/simulation.html
+++ b/simulation.html
@@ -119,8 +119,8 @@
                 labels: priceData.map((_, index) => index),
                 datasets: [{
                     label: 'Price of Token in USD',
-                    backgroundColor: 'rgb(75, 192, 192)',
-                    borderColor: 'rgb(75, 192, 192)',
+                    backgroundColor: '#FFC0CB',
+                    borderColor: '#232323',
                     data: priceData,
                 }]
             },
